deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-app
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-app
  template:
    metadata:
      labels:
        app: static-app
    spec:
      containers:
      - name: static-app
        image: nginx:latest
        resources:
          requests:
            cpu: 1
