nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
  namespace: app
spec:
  selector:
    app: static-app
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30082
